@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Terminal.h,v 1.28 2007-02-12 20:21:45 yfabian Exp $
+// $Id: VT100Terminal.h,v 1.29 2007-11-21 05:24:19 yfabian Exp $
 /*
  **  VT100Terminal.h
  **
@@ -124,7 +124,9 @@
 #define ANSICSI_VPA	     3001	// Vert Position Absolute
 #define ANSICSI_VPR	     3002	// Vert Position Relative
 #define ANSICSI_ECH	     3003	// Erase Character
-#define ANSICSI_PRINT	     3004	// Print to Ansi
+#define ANSICSI_PRINT	 3004	// Print to Ansi
+#define ANSICSI_SCP      3005   // Save cursor position
+#define ANSICSI_RCP      3006   // Restore cursor position
 
 // Toggle between ansi/vt52
 #define STRICT_ANSI_MODE		4000
