@@ -1,4 +1,13 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0611</STRONG> includes the following changes:
+<UL>
+    <LI> Aoid crashes when memory runs out.</LI>
+    <LI> Removed excessive debug outputs.</LI>
+    <LI> Adjustments to the full screen mode. Fixed a crash related (#1725139).</LI>
+    <LI> Reduced CPU Usage.</LI>
+    <LI> Changed the default font for NSTextInput display to the non-ASCII font.</LI>
+</UL>
+
 Version <STRONG>0.9.5.0517</STRONG> addresses these two bugs in 0516 build:
 <UL>
     <LI> Fixed a key mapping problem with number keys (#1720922). </LI>
