@@ -22,6 +22,10 @@
 <UL>
 <LI><STRONG>Why my arrow/HOME/END keys are not working?</STRONG><BR>
 
+    <I>NOTES: </I>In one of the old beta (or beta-beta?) versions, I have included a Terminal
+    Profile called "Xterm (OS X)". That one CAN CAUSE this problem. Please remove it
+    if you still have it.<BR><BR>
+    
     When the terminal type of your sessions is set to one of those "xterm" types, 
     iTerm handles the arrow keys, the home key, and the end key in a special way. 
     The escape sequences generated by these keys depend on if your session is in 
@@ -99,7 +103,12 @@
 	Check the option for "use double width for Non-ASCII characters".<BR><BR></LI>
 <LI><STRONG>Can I completely hide the toolbar?</STRONG><BR>
 	Yes, you can. The oblong button on the top right corner of the window does the trick.<BR><BR></LI>
-	
+<LI><STRONG>Why can't I set my session's shortcut key to CTRL-COMMAND-D</STRONG><BR>
+	That key is used by OS X's dictionary program.<BR><BR></LI>
+<LI><STRONG>Why the mouse cursor look funny?</STRONG><BR>
+	That's a lazy solution to get it visible on both bright and dark background. Sorry guys, I 
+    have more important things to do!<BR><BR></LI>
+
 </UL>
 </TD>
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
